this after chnnages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="main-ctr">
         <input type="text" id="input" placeholder="Add a new task...">
         <button id="add-btn">ADD</button>
-        <ul id="list">
-            
-        </ul>
+        <div class="list-ctr">
+        <ul id="list"></ul>
+    </div>
 
     </div>
     <script src="script.js"></script>
